#42 [JS] fix: preview photo z-index enhancement action

--- a/css/saturne.css
+++ b/css/saturne.css
@@ -2065,7 +2065,7 @@ div.wpeo-modal-patchnote .wpeo-button {
   border: 1px solid rgba(0, 0, 0, 0.4) !important;
 }
 
-.preview-photo {
+.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.ui-draggable.ui-resizable.preview-photo {
   z-index: 2100 !important;
 }
 
