--- a/css/scss/style.scss
+++ b/css/scss/style.scss
@@ -2,7 +2,7 @@
 @import "module/module";
 @import "page/page";
 
-.preview-photo {
+.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.ui-draggable.ui-resizable.preview-photo {
   z-index: 2100 !important;
 }
 
